--- a/Desafio 3/Ejercicio 1/estilos/style.css
+++ b/Desafio 3/Ejercicio 1/estilos/style.css
@@ -4,27 +4,31 @@ body{
     font-family: "Mulish", sans-serif;
     font-weight: 700;
 }
-h1{
-    font-size: 29px;
-    color:#04146c;
+
+h1,p { font-size: 37px; 
+    color: #04146c;
+    font-weight: 900;}
 }
 p{
     font-weight: 400;
-    font-size: 20px;
+    font-size: 18px;
     color:#04146c;
-    margin: 45px;
+    margin-left: 70px;
+    width: 40%;
+    margin-top: 0px;
     
 }
 
 h2{
     color:#0a2ff1;
+    font-size: 21px;
+    text-transform: uppercase;
+    margin-bottom: 2px;
 }
 
 img{
-    width: 40px;
-    height: 40px;
-    margin: auto;
-    float: left;
-    padding: 5px;
+    width: 55px; 
+    vertical-align: middle; 
+    margin-right: 15px;
 
 }
